Atualização dos scripts

--- a/exercicio1/paralelo/makefile
+++ b/exercicio1/paralelo/makefile
@@ -1,7 +1,8 @@
 all: primo
 
+
 primo: main.o calc_primo.o
-	gcc main.o -pg -O1 calc_primo.o -o primo
+	gcc main.o -O3 -pg calc_primo.o -o primo
 	
 main.o: main.c
 	gcc -pg -c main.c
