arrumando programa paralelo

--- a/exercicio1/paralelo/makefile
+++ b/exercicio1/paralelo/makefile
@@ -2,13 +2,13 @@ all: primo
 
 
 primo: main.o calc_primo.o
-	gcc main.o -O3 -pg calc_primo.o -o primo
+	gcc main.o -fopenmp calc_primo.o -o primo
 	
 main.o: main.c
-	gcc -pg -c main.c
+	gcc -fopenmp -c main.c
 
 calc_primo.o: calc_primo.c
-	gcc -pg -c calc_primo.c
+	gcc -fopenmp -c calc_primo.c
 
 clean:
 	rm primo
