--- a/exercicio1/paralelo/makefile
+++ b/exercicio1/paralelo/makefile
@@ -1,14 +1,7 @@
 all: primo
 
-
-primo: main.o calc_primo.o
-	gcc main.o -fopenmp calc_primo.o -o primo
-	
-main.o: main.c
-	gcc -fopenmp -c main.c
-
-calc_primo.o: calc_primo.c
-	gcc -fopenmp -c calc_primo.c
+primo: main.c calc_primo.c
+	gcc main.c -fopenmp calc_primo.c -o primo
 
 clean:
 	rm primo
