--- a/competicao/makefile
+++ b/competicao/makefile
@@ -1,7 +1,7 @@
 all: primo
 
-primo: main.c calc_primo.c
-	gcc primo.c -O1 -mtune=native -fopenmp -o primo
+primo: primo.c
+	gcc primo.c -O1 -lm -mtune=native -o primo
 
 clean:
 	rm primo
